cmake_minimum_required(VERSION 3.0)

project (JFilters)

add_definitions(-DVENDOR_STRING="https://github.com/Iunusov/JFilters")
add_definitions(-DVENDOR_VERSION=1002)

set(CMAKE_BUILD_TYPE Release)

if((${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC))
  set(MYFLAGS "/O2 /WX- /MT")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MYFLAGS}")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MYFLAGS}")
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MYFLAGS}")
  set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${MYFLAGS}")
endif()

IF(CMAKE_COMPILER_IS_GNUCC)
	set(MYFLAGS "-Ofast -Wall -Wextra -Wl,--no-undefined")
    set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${MYFLAGS}")
    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${MYFLAGS}")
	set(CMAKE_C_FLAGS_RELEASE  "${CMAKE_C_FLAGS_RELEASE} ${MYFLAGS}")
    set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} ${MYFLAGS}")
ENDIF(CMAKE_COMPILER_IS_GNUCC)


add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)


